--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,15 @@
 {
   "dependencies": {
     "express": "^4.19.2"
-  }
+  },
+  "name": "api",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
